fixed spacing & copy for cxd

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ img {
 
 #cxd {
     margin-top: 50px;
-    margin-left: 0em;
+    margin-left: 2em;
     width: 25em;
 }
 
